--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,14 +28,18 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProjectUAS.jar
+dist.jar=${dist.dir}/BioskopMini.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ProjectUAS
+dist.jlink.output=${dist.jlink.dir}/BioskopMini
 excludes=
+file.reference.mysql-connector-j-8.0.31.jar=D:\\PHB\\TEKNIK INFORMATIKA\\SEMESTER 3\\Pemrograman Komputer 1\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${libs.MySQL_JDBC_Driver.classpath}:\
+    ${file.reference.mysql-connector-j-8.0.31.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -70,8 +74,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ProjectUAS
-main.class=projectuas.ProjectUAS
+jlink.launcher.name=BioskopMini
+main.class=AppUser.login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
